plugins {
    id 'java'
    id 'application'
    id("com.gradleup.shadow") version "9.0.0-beta12"
}

group = 'br.com.rinha'
version = '1.0.0'

repositories {
    mavenCentral()
    google()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = 'br.com.rinha.RinhaBackendApp'
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'org.postgresql:postgresql:42.7.2'
    implementation 'com.zaxxer:HikariCP:5.1.0'
    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
    implementation 'ch.qos.logback:logback-classic:1.4.12'
    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.3'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    implementation 'org.testng:testng:7.1.0'// Implementação do Logback
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ["--enable-preview"]
}

tasks.withType(Test).configureEach {
    jvmArgs += ["--enable-preview"]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ["--enable-preview"]
}

shadowJar {
    archiveBaseName.set('rinha-backend')
    archiveClassifier.set('')
    archiveVersion.set('')
}
